# the-full-stack-website

./: 404.html  Makefile  index.html  main.py  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html
cloud-gpus/: index.html
conference/: index.html
conference/sponsors/: index.html
course/: index.html
course/2022/: index.html
docs/blog/: index.md
docs/cloud-gpus/: cloud-gpus.csv  index.md
docs/conference/: index.md
docs/llm-bootcamp/: expense.md
llm-bootcamp/: index.html
llm-bootcamp/expense/: index.html
llm-bootcamp/sponsors/: index.html
llm-bootcamp/spring-2023/: index.html
search/: search_index.json
spring2021/: index.html
spring2021/lab-1/: index.html
spring2021/lab-2/: index.html
spring2021/lab-3/: index.html
spring2021/lab-4/: index.html
spring2021/lab-5/: index.html
spring2021/lab-6/: index.html
spring2021/lab-7/: index.html
spring2021/lab-8/: index.html
spring2021/lab-9/: index.html
spring2021/lecture-1/: index.html
spring2021/lecture-10/: index.html
spring2021/lecture-11/: index.html
spring2021/lecture-12/: index.html
spring2021/lecture-13/: index.html
spring2021/lecture-2a/: index.html
spring2021/lecture-2b/: index.html
spring2021/lecture-3/: index.html
spring2021/lecture-4/: index.html
spring2021/lecture-5/: index.html
spring2021/lecture-6/: index.html
spring2021/lecture-7/: index.html
spring2021/lecture-8/: index.html
spring2021/lecture-9/: index.html
spring2021/notebook-1/: index.html
spring2021/panel/: index.html
(+75 files in other folders)
